--- a/PatchLoader/PatchLoader.csproj
+++ b/PatchLoader/PatchLoader.csproj
@@ -3,8 +3,9 @@
 		<TargetFramework>net40</TargetFramework>
 		<PlatformTarget>x64</PlatformTarget>
 		<OutputType>Exe</OutputType>
-		<Platforms>AnyCPU;x64</Platforms>
-		<DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
+		<Platforms>x64</Platforms>
+		<BaseOutputPath>$(ProjectDir)bin\</BaseOutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<ItemGroup>
@@ -13,4 +14,7 @@
 		<!--<Copy SourceFiles="@(FilesToMove)" DestinationFolder="$(SolutionDir)bin" OverwriteReadOnlyFiles="true" />-->
 		<Copy SourceFiles="@(FilesToMove)" DestinationFolder="C:\DOS2DE_Engine\DefEd" OverwriteReadOnlyFiles="true" />
 	</Target>
+	<ItemGroup>
+	  <PackageReference Include="Lib.Harmony" Version="2.1.1" />
+	</ItemGroup>
 </Project>
