--- a/LeaderTweaks/LeaderTweaks.csproj
+++ b/LeaderTweaks/LeaderTweaks.csproj
@@ -86,6 +86,7 @@
 		<PackageReference Include="Lib.Harmony" Version="2.2.2">
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
+		<PackageReference Include="Samboy063.Tomlet" Version="5.0.1" />
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<ItemGroup>
